# git_min

./: .gitignore  README.md  git_min  index.html  package-lock.json  package.json  tsconfig.json
docs/superpowers/plans/: 2026-07-18-git-min-interaction-hardening.md  2026-07-19-adaptive-tree-sitter-diff-editor-open.md  2026-07-19-commit-column-scroll.md  2026-07-19-contextual-actions.md  2026-07-19-diff-syntax-contrast.md  2026-07-19-git-resource-dock.md  (+3 more)
scripts/: generate-syntax-themes.mjs
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor.rs  lib.rs  main.rs
src/components/: CommandPalette.tsx  Dialog.tsx  GitResources.tsx  GraphTable.tsx  Inspector.tsx  KeymapOverlay.tsx  ResizeHandles.tsx  Sidebar.test.ts  Sidebar.tsx  Statusbar.tsx  TabsBar.tsx  Titlebar.tsx  Toast.tsx  WorkingTree.tsx
src/lib/: actions.ts  ai.ts  browserPreference.test.ts  browserPreference.ts  conflictModel.test.ts  conflictModel.ts  diffModel.test.ts  diffModel.ts  editor.test.ts  editor.ts  externalLinks.ts  fileIcons.ts  format.ts  git.ts  gitUi.test.ts  gitUi.ts  graphLayout.test.ts  graphLayout.ts  highlight.test.ts  highlight.ts  lineage.test.ts  lineage.ts  openSettings.ts  persist.ts  queries.ts  queryClient.ts  repoSort.ts  themeContract.ts  treeSitterHighlight.ts  types.ts
src/styles/: syntax-themes.css  views.css
src/ui/: ColorPicker.tsx  ContextMenu.tsx  FilePath.tsx  Icon.test.ts  Icon.tsx  MiniTabs.tsx
tests/: git-workspace-contract.test.mjs
(+14 files in other folders)
